add playerBuyCardUseCase & Refactor GameController
fix playerTest error