@@ -4,16 +4,19 @@ import domain.card.establishment.Bakery;
 import domain.card.establishment.Establishment;
 import domain.card.establishment.IndustryColor;
 import domain.card.establishment.WheatField;
+import domain.card.landmark.Landmark;
 import domain.card.landmark.TrainStation;
-import domain.events.BuyEstablishmentEvent;
+import domain.events.BuyCardEvent;
 import domain.events.DomainEvent;
+import domain.events.GameOverEvent;
 import domain.events.RollDiceEvent;
+import domain.exceptions.MachiKoroException;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 @Builder
 @Data
@@ -60,7 +63,6 @@ public class Game {
     }
 
     public void setUp() {
-
         for (Player player : players) {
             player.gainCoin(3);
             bank.payCoin(3);
@@ -68,6 +70,10 @@ public class Game {
             player.addCardToHandCard(new WheatField());
             marketplace.initial();
         }
+    }
+
+    public Player getPlayer(String playerId) {
+        return players.stream().filter(player -> playerId.equals(player.getId())).findFirst().orElseThrow();
     }
 
     public List<Player> getPlayers() {
@@ -110,9 +116,7 @@ public class Game {
     }
 
     public List<DomainEvent> rollDice(String playerId, int diceCount) {
-        if (!playerId.equals(turnPlayer.getId())) {
-            throw new IllegalArgumentException("Turn player id is incorrect");
-        }
+        checkIsTurnPlayer(playerId);
 
         if ((diceCount > 1 && !turnPlayer.hasLandmarkFlipped(TrainStation.class)) || diceCount > 2 || diceCount < 1) {
             throw new IllegalArgumentException("Invalid quantity of dice");
@@ -126,14 +130,41 @@ public class Game {
         return List.of(event);
     }
 
-    public List<DomainEvent> turnPlayerBuyCard(String type, String cardName) {
+    public List<DomainEvent> turnPlayerBuyCard(String playerId, String type, String cardName) {
+        checkIsTurnPlayer(playerId);
         if ("Establishment".equals(type)) {
             Establishment establishment = marketplace.findEstablishmentByName(cardName);
-            turnPlayer.addCardToHandCard(establishment);
+            turnPlayer.buyEstablishment(establishment, bank);
             marketplace.removeEstablishment(establishment);
-            DomainEvent buyEstablishmentEvent = new BuyEstablishmentEvent(String.format("玩家 %s 花費了 %d 元 購買了 %s", turnPlayer.getId(), establishment.getConstructionCost(), establishment.getName()));
+            DomainEvent buyEstablishmentEvent = new BuyCardEvent(String.format("玩家 %s 花費了 %d 元 建造了 %s", turnPlayer.getId(), establishment.getConstructionCost(), establishment.getName()));
+            updateTurnPlayer();
             return List.of(buyEstablishmentEvent);
-        } else
-            return Collections.emptyList();
+        } else {
+            Landmark landmark = turnPlayer.getHandCard().getLandmarks().stream().filter(lm -> cardName.equals(lm.getName())).findFirst().orElseThrow(NoSuchElementException::new);
+            turnPlayer.flipLandMark(landmark, bank);
+            if (isGameOver(turnPlayer)) {
+                DomainEvent GameOverEvent = new GameOverEvent(String.format("玩家 %s 勝利", turnPlayer.getId()));
+                return List.of(GameOverEvent);
+            } else {
+                DomainEvent flipLandMarkEvent = new BuyCardEvent(String.format("玩家 %s 花費了 %d 元 建造了 %s", turnPlayer.getId(), landmark.getConstructionCost(), landmark.getName()));
+                updateTurnPlayer();
+                return List.of(flipLandMarkEvent);
+            }
+        }
+    }
+
+    private boolean isGameOver(Player turnPlayer) {
+        return turnPlayer.getLandmarks().stream().allMatch(landmark -> landmark.isFlipped());
+    }
+
+    private void checkIsTurnPlayer(String playerId) {
+        if (!playerId.equals(turnPlayer.getId())) {
+            throw new MachiKoroException("Turn player id is incorrect");
+        }
+    }
+
+    private void updateTurnPlayer() {
+        int index = players.indexOf(turnPlayer);
+        turnPlayer = players.get((index + 1) % players.size());
     }
 }
